# Neural_nework_parameterization

./: .gitmodules  README.md
SAMSON_NN/: Build  Makefile
SAMSON_NN/SRC/: CMakeLists.txt  cmake-gfortran.patch  flake.nix  main.f90  setparm.f90
sam_code_NN/: CMakeLists.txt  grid.f90
sam_code_NN/RAD_CAM/: CMakeLists.txt
sam_code_NN/SCRIPT/: Filepath  Makefile.init
